cosmetic layout issues in examples

--- a/heron/resources/css/default.css
+++ b/heron/resources/css/default.css
@@ -94,6 +94,7 @@ See also override-ext.js for GridView cell Template adaptation.
     font-size: 11px;
     font-family: tahoma,arial,verdana,sans-serif;
     border-color:#99bbe8;
+    height: 18px;
     /*background-image: url(../images/default/panel/white-top-bottom.gif);*/
 }
 
